# screener-data-scrapper

./: .dockerignore  .screener_state.json  Dockerfile  Readme.md  pyproject.toml  requirements.txt  run_screener.py
app/: main.py
app/agents/: intent_agent.py  query_agent.py
app/db/: apply_score_decay.py  build_portfolio.py  db.py  init_db.py  insert.py  rank_by_strategy.py  save_score_history.py  score_stocks.py  update_strategy_rank.py
app/mcp/: http_mcp_server.py  mcp_auto_server.py  mcp_caller.py  mcp_server.py
app/pipeline/: golden_cross.py
app/schemas/: intent.py  screener_query.py
app/scoring/: composite_score.py
app/services/: column_mapper.py  portfolio_analysis.py  portfolio_read_service.py  portfolio_service.py  run_all_strategies.py  run_strategy_pipeline.py
app/strategy/: api_registry.py  registery.py  scorer.py
app/tools/: screener_browser.py  screener_extractor.py
app/validators/: death_cross.py  golden_cross.py  trend_strength.py  volume_breakout.py
data/: screener.db
screener_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/validator/: test_death_cross.py  test_golden_cross.py  test_trend_strength.py  test_volume_breakout.py
